<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/coupe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_coupe"
        app:layout_constraintBottom_toTopOf="@+id/sedan_button"
        app:layout_constraintEnd_toStartOf="@+id/minivan_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/minivan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_minivan"
        app:layout_constraintBottom_toTopOf="@+id/suv_button"
        app:layout_constraintEnd_toStartOf="@+id/bike_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/coupe_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/bike_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_bike"
        app:layout_constraintBottom_toTopOf="@+id/boat_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minivan_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/sedan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sedan"
        app:layout_constraintBottom_toTopOf="@+id/van_button"
        app:layout_constraintEnd_toStartOf="@+id/suv_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coupe_button"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/suv_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_suv"
        app:layout_constraintBottom_toTopOf="@+id/truck_button"
        app:layout_constraintEnd_toStartOf="@+id/boat_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sedan_button"
        app:layout_constraintTop_toBottomOf="@+id/minivan_button"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/boat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_boat"
        app:layout_constraintBottom_toTopOf="@+id/other_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/suv_button"
        app:layout_constraintTop_toBottomOf="@+id/bike_button"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/van_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_van"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintEnd_toStartOf="@+id/truck_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sedan_button"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/truck_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_truck"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintEnd_toStartOf="@+id/other_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/van_button"
        app:layout_constraintTop_toBottomOf="@+id/suv_button"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/other_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_other"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/truck_button"
        app:layout_constraintTop_toBottomOf="@+id/boat_button"
        android:onClick="onClick"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>